# anki-ai-editor

./: .editorconfig  .env.sample  .htmlhintrc  .mega-linter.yml  .pre-commit-config.yaml  LICENCE  README.md  lychee.toml  pyproject.toml
.github/workflows/: mega-linter.yaml
src/: app.py  config.py  flask_app.py  utis.py
src/anki/: client.py
src/card_editor/: generator.py  prompt_template.txt
src/templates/: base.html  card.html  deck.html  index.html
