[project]
name = "anki-ai-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.73.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]
